sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:10: error: '(' expected but identifier found.
      if plusPetit(j,min) min = j;
         ^AlgInsertionSort:10: error: illegal start of simple expression
      if plusPetit(j,min) min = j;
                                 ^